--- a/blog/2022-11-30.mdx
+++ b/blog/2022-11-30.mdx
@@ -2,8 +2,6 @@
 title: November 2022
 ---
 
-## Tracking Battery Life Best Practices
-
 ## Debug Devices with Custom Data Recordings
 
 [Memfault’s new Custom Data Recordings (CDRs)](/docs/platform/inspecting-a-device#custom-data-recordings)
@@ -13,7 +11,7 @@ their user-defined reason in relation to the existing debug information, such as
 metrics, logs, traces, or reboots to provide even more detail about the state a
 device was in at a given moment.
 
-![tracking_battery_life_best_practices.png](/img/blog/2022-11-30-Custom-Data-Recordings.png)
+![custom_data_recordings.png](/img/blog/2022-11-30-Custom-Data-Recordings.png)
 
 The underlying data of CDRs can be of any format and is accessible for download
 for further analysis outside of Memfault. This allows devices to send
