--- a/docs/platform/charts.mdx
+++ b/docs/platform/charts.mdx
@@ -126,7 +126,8 @@ and counts to relative values “per 1,000 devices". This helps understanding re
 trends when you are comparing these values between populations of different
 sizes (e.g. comparing devices from large production cohort Default against those
 from a smaller test cohort Beta) or when the population size changes over time
-(e.g. new devices being activated continuously).
+(e.g. new devices being activated continuously or
+[changing Fleet Sampling resolutions](/docs/platform/fleet-sampling)).
 
 ### Toggling Chart Normalization on/off
 
