Add custom metrics to fleet sampling aspects table (#363)
* Add custom metrics to fleet sampling aspects table

* Prettified Code!

Co-authored-by: can-memfault <can-memfault@users.noreply.github.com>

--- a/docs/platform/fleet-sampling.mdx
+++ b/docs/platform/fleet-sampling.mdx
@@ -25,7 +25,7 @@ respective states in the table:
 
 | Aspects/Resolutions | Platform | Off                                                | On                                                                                                                                                                                                                                                                                                                                                        |
 | ------------------- | -------- | -------------------------------------------------- | --------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
-| Monitoring          | Android  | No hourly heartbeats                               | Batterystats metrics are uploaded every 2h                                                                                                                                                                                                                                                                                                                |
+| Monitoring          | Android  | No hourly heartbeats                               | [Batterystats](/docs/android/android-builtin-metrics#battery-and-related-metrics) and [custom metrics](/docs/android/android-custom-metrics) are uploaded every 2h                                                                                                                                                                                        |
 | Debugging           | Android  | No crash collection                                | Crash report collection (via Bug Reports or Caliper), reboot reasons                                                                                                                                                                                                                                                                                      |
 | Logging             | Android  | No logs, except if they are part of a crash report | Log collection and upload in the case of an overlap with a trace event (see details here). <br /> (Only on Bort SDK, see [Log Collection](/docs/platform/fleet-sampling#log-collection)) Logs that have been already collected on the device and not yet sent will also be uploaded as soon as the device receives the logging resolution change to `On`. |
 
